--- a/public/css/site.css
+++ b/public/css/site.css
@@ -6,6 +6,13 @@ a:link { text-decoration: none }
 body { background-color: #f3f3f3}
 .titulos { font-family: 'Bree Serif', serif; }
 .titulos_sub { font-family: 'Bree Serif', serif; border-bottom: 1px solid; margin-bottom: 10px; padding-bottom: 10px }
+.btn-wsp { background-color: #4DC247; font-weight: 500; color: #FFF; font-size: 11px; padding: 3px 5px; height: 25px; border-radius: 3px }
+.card-header { font-size: 15px; padding: 10px }
+.card-body { font-size: 12px }
+.panel-title a { font-size: 15px; color: #333 }
+.panel-title a:hover { color: #8E1013 }
+.panel-body { font-size: 13px; color: #8E1013 }
+.nopadding { padding: 0 !important;}
 
 .vermelho { color: #8E1013 }
 .table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {background-color: #fff;color: #333;}
@@ -24,20 +31,36 @@ main #agenda { font-size: 13px }
 main #agenda table a { color: #333 }
 main #agenda table a:hover { color: #8E1013 }
 main #agenda .badge { font-size: 13px }
-main #links .card-header { font-size: 15px }
-main #links .card-body { font-size: 12px }
 
-main #noticias .card-header { padding: 10px !important;}
+main #profissionais { font-size: 13px }
+main #profissionais .badge { font-size: 12px }
+main #profissionais table td { vertical-align: middle }
+
+main #noticias_list a { color:  #333 }
+main #noticias_list a:hover { color:  #8E1013 }
+
 main #noticias .data { font-size: 12px; color: #8E1013; margin-top: 5px}
 main #noticias .titulo { font-size: 15px; color: #999; margin: 5px 0}
 main #noticias .resumo { font-size: 13px; color: #333;}
 
 main #atalhos { background-color: #8E1013; color: #FFF }
-
+main #atalhos a { color: #FFF }
+main #atalhos a:hover { color: yellow;}
 main #midias .card-body { padding: 10px }
 main #midias .data { color: #8E1013; font-size: 10px; margin-top: 5px }
 main #midias .titulo { color: #333; font-size: 12px; margin-top: 5px }
+
+main #fiscalizacao p { font-size: 12px }
+
+main #transparencia { font-size: 12px }
+main #transparencia table td { vertical-align: middle }
+
+main #video .youtubeVideoLoader { border: 5px solid #FFF; }
 main #video .titulo { color: #333; font-size: 12px; margin-top: 5px }
+main #video .thumbnail .caption { margin: 0; padding: 0}
+main #video .thumbnail:hover { cursor: pointer}
+main #video .titulo { font-size: 14px; color: #DC3545; font-weight: bold; text-transform: uppercase; border-bottom: 1px solid #ccc; padding-bottom: 5px}
+main #video .descricao { font-size: 12px; color: #333; margin: 10px 0}
 
 footer #rodape { background-color: #333; color: #FFF; font-size: 12px;}
 footer #copyright { background-color: #000; color: #fff; font-size: 12px}
